# cmake-init-conan-example

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  conanfile.py  conanfile.txt  dir_49e56c817e5e54854c35e136979f97ca.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  lib_8cpp.html  lib_8hpp.html  main_8cpp.html  modules.html  namespaces.html  pages.html  searchdata-v1.js  searchdata-v2.js  structlibrary.html
.github/scripts/: conan-ci-setup.sh
.github/workflows/: ci.yml
cmake/: conan.cmake  dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp
test/: CMakeLists.txt
test/source/: conan-example_test.cpp
